// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField should render a checkbox input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0:nth-child(5) {
  border-bottom: 0.0625rem solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  scroll-margin-top: 0.5rem;
  display: inline-block;
  -webkit-flex: initial;
  -ms-flex: initial;
  flex: initial;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.875rem;
  height: 1.875rem;
  cursor: pointer;
  box-sizing: border-box;
  border: solid 0.0625rem #141414;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.emotion-2:checked::after {
  content: "";
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 117.65 98.87'%3E%3Cpath d='M96.64 0L46.11 60.23 17.63 36.34 0 57.35l28.47 23.89 21.01 17.63 17.63-21.01 50.54-60.22L96.64 0z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  -webkit-background-position: 50%;
  background-position: 50%;
  -webkit-background-size: 0.889rem;
  background-size: 0.889rem;
  display: inline-block;
  width: 100%;
  height: 100%;
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    -webkit-appearance: auto;
    -moz-appearance: auto;
    -ms-appearance: auto;
    appearance: auto;
  }

  .emotion-2:checked::after {
    content: none;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

.emotion-3 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.375rem;
  color: #141414;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-margin-start: 1rem;
  margin-inline-start: 1rem;
  cursor: pointer;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-3 a {
  color: #222222;
  border-bottom: 0.0625rem solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-3 a:visited {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

.emotion-3 a:focus,
.emotion-3 a:hover {
  border-bottom: 0.125rem solid #B80000;
  color: #B80000;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        aria-invalid="false"
        class="emotion-2"
        id="testCheckboxID"
        name="testCheckboxID"
        type="checkbox"
      />
      <label
        class="emotion-3"
        for="testCheckboxID"
        id="label-testCheckboxID"
      >
        This is a text field (optional)
      </label>
    </div>
  </div>
</div>
`;

exports[`FormField should render a required input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0:nth-child(5) {
  border-bottom: 0.0625rem solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.375rem;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1 a {
  color: #222222;
  border-bottom: 0.0625rem solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-1 a:visited {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

.emotion-1 a:focus,
.emotion-1 a:hover {
  border-bottom: 0.125rem solid #B80000;
  color: #B80000;
}

.emotion-2 {
  scroll-margin-top: 2.75rem;
  border: solid 0.0625rem #141414;
  outline: solid 0.0625rem transparent;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border-color: canvasText;
    outline: 0;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testAllyID"
      id="label-testAllyID"
    >
      This is a required text field
    </label>
    <div>
      <input
        aria-invalid="false"
        class="emotion-2"
        id="testAllyID"
        name="testAllyID"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`FormField should render a tel input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0:nth-child(5) {
  border-bottom: 0.0625rem solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.375rem;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1 a {
  color: #222222;
  border-bottom: 0.0625rem solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-1 a:visited {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

.emotion-1 a:focus,
.emotion-1 a:hover {
  border-bottom: 0.125rem solid #B80000;
  color: #B80000;
}

.emotion-2 {
  scroll-margin-top: 2.75rem;
  border: solid 0.0625rem #141414;
  outline: solid 0.0625rem transparent;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border-color: canvasText;
    outline: 0;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testTelID"
      id="label-testTelID"
    >
      This is a text field (optional)
    </label>
    <div>
      <input
        aria-invalid="false"
        class="emotion-2"
        id="testTelID"
        name="testTelID"
        type="tel"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`FormField should render a text input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0:nth-child(5) {
  border-bottom: 0.0625rem solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.375rem;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1 a {
  color: #222222;
  border-bottom: 0.0625rem solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-1 a:visited {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

.emotion-1 a:focus,
.emotion-1 a:hover {
  border-bottom: 0.125rem solid #B80000;
  color: #B80000;
}

.emotion-2 {
  scroll-margin-top: 2.75rem;
  border: solid 0.0625rem #141414;
  outline: solid 0.0625rem transparent;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border-color: canvasText;
    outline: 0;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testTextID"
      id="label-testTextID"
    >
      This is a text field (optional)
    </label>
    <div>
      <input
        aria-invalid="false"
        class="emotion-2"
        id="testTextID"
        name="testTextID"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`FormField should render a textarea input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0:nth-child(5) {
  border-bottom: 0.0625rem solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.375rem;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1 a {
  color: #222222;
  border-bottom: 0.0625rem solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-1 a:visited {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

.emotion-1 a:focus,
.emotion-1 a:hover {
  border-bottom: 0.125rem solid #B80000;
  color: #B80000;
}

.emotion-2 {
  scroll-margin-top: 2.75rem;
  border: solid 0.0625rem #141414;
  outline: solid 0.0625rem transparent;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  resize: none;
  display: block;
  overflow: clip;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border-color: canvasText;
    outline: 0;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testTextAreaID"
      id="label-testTextAreaID"
    >
      This is a text field (optional)
    </label>
    <textarea
      aria-invalid="false"
      class="emotion-2"
      id="testTextAreaID"
      name="testTextAreaID"
      rows="4"
    />
  </div>
</div>
`;

exports[`FormField should render an email input with an associated label 1`] = `
.emotion-0 {
  margin-top: 1rem;
}

.emotion-0:nth-child(5) {
  border-bottom: 0.0625rem solid #8A8C8E;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 25rem) {
  .emotion-0:nth-child(5) {
    padding-bottom: 1.5rem;
    margin-bottom: 1.5rem;
  }
}

.emotion-1 {
  color: #141414;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  display: inline-block;
  margin-bottom: 0.375rem;
  color: #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-1 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-1 a {
  color: #222222;
  border-bottom: 0.0625rem solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
}

.emotion-1 a:visited {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

.emotion-1 a:focus,
.emotion-1 a:hover {
  border-bottom: 0.125rem solid #B80000;
  color: #B80000;
}

.emotion-2 {
  scroll-margin-top: 2.75rem;
  border: solid 0.0625rem #141414;
  outline: solid 0.0625rem transparent;
  width: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media screen and (forced-colors: active) {
  .emotion-2 {
    border-color: canvasText;
    outline: 0;
  }
}

.emotion-2:focus {
  outline: 0.1875rem solid #FFFFFF;
  box-shadow: 0 0 0 0.1875rem #000000;
  outline-offset: 0.1875rem;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      class="emotion-1"
      for="testEmailID"
      id="label-testEmailID"
    >
      This is a text field (optional)
    </label>
    <div>
      <input
        aria-invalid="false"
        class="emotion-2"
        id="testEmailID"
        name="testEmailID"
        type="email"
        value=""
      />
    </div>
  </div>
</div>
`;
